--- a/test-grid/src/app/detail-grid/detail-grid.component.html
+++ b/test-grid/src/app/detail-grid/detail-grid.component.html
@@ -1,4 +1,6 @@
 <h1>{{title}}</h1>
+<app-toolbar></app-toolbar>
+
 <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows class="mat-elevation-z8">
 
   <ng-container matColumnDef="name">
@@ -27,7 +29,7 @@
     <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
       <div class="example-element-detail"
            [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-        <div class="example-element-diagram" style="background-color: yellow">
+        <div class="example-element-diagram" style="background-color: {{element.position>5?'orange':'lightgreen'}}">
           <div class="example-element-position"> {{element.position}} </div>
           <div class="example-element-symbol"> {{element.symbol}} </div>
           <div class="example-element-name"> {{element.name}} </div>
