dhtmlx gantt integration

--- a/test-grid/src/app/app.component.html
+++ b/test-grid/src/app/app.component.html
@@ -1,6 +1,8 @@
 <!--<div style="margin-bottom: 50px">
   <app-detail-grid></app-detail-grid>
 </div>-->
-<div style="margin-bottom: 50px">
-  <app-jqx-tests></app-jqx-tests>
-</div>
+<!--<div style="margin-bottom: 50px">-->
+<!--  <app-jqx-tests></app-jqx-tests>-->
+<!--</div>-->
+
+<app-dhtml></app-dhtml>
